--- a/index.html
+++ b/index.html
@@ -161,13 +161,32 @@
                 <a href="#">Shop Man</a>
             </div>
         </section>
-        <section class="section-3">
+        <section class="section-4">
             <div class="container">
-
+                <div class="section-4__content">
+                    <h2>Get 10% off on your next online order.</h2>
+                    <p>Join our newsletter to receive updates on O.A.D. collections, events and new arrivals.</p>
+                    <form>
+                        <div class="section-4__email">
+                            <label for="email"></label>
+                            <input type="email" placeholder="ENTER YOUR EMAIL" id="email">
+                            <button class="section-4__btn">SIGN UP</button>
+                        </div>
+                        <div class="section-4__checkbox">
+                            <label for="accept"></label>
+                            <input type="checkbox" id="accept">
+                            <p>I accept the <a href="#">O.A.D. privacy policy.</a></p>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container-fluid">
+            <div class="banner"></div>
+        </div>
+    </footer>
 
 </body>
 
