--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <div class="nav-2__right-part">
                         <select name="language" id="">
                             <option value="">IE / EUR</option>
+                            <option value="">FR / EUR</option>
                         </select>
                         <img src="./assets/images/header-shop.svg" alt="shop">
                     </div>
@@ -44,24 +45,22 @@
     </header>
     <main>
         <section class="section-1">
-            <div class="container">
-                <div class="section-1__wrapper">
-                    <div class="section-1__content">
-                        <h1>FW22 collection</h1>
-                        <h2>An Endless <br> Pursuit <br> of Nature</h2>
-                        <p>In 1853 Ole Andreas Devold embarked on his journey, and since then our wool has been formed
-                            in the
-                            roughest conditions. Today, we build on our tradition of mastering wool. Relying on our
-                            dedication
-                            to craftmanship, we develop the finest quality from the most robust material. Crafted to
-                            withstand
-                            storms and to comfort on late summer nights. With profound care for nature, we create
-                            knitwear that
-                            lasts, that can be passed on – a legacy for times to come.</p>
-                    </div>
-                    <div class="section-1-img">
-                        <img src="./assets/images/section-1-img.jpg" alt="W22 collection">
-                    </div>
+            <div class="section-1__wrapper">
+                <div class="section-1__content">
+                    <h1>FW22 collection</h1>
+                    <h2>An Endless <br> Pursuit <br> of Nature</h2>
+                    <p>In 1853 Ole Andreas Devold embarked on his journey, and since then our wool has been formed
+                        in the
+                        roughest conditions. Today, we build on our tradition of mastering wool. Relying on our
+                        dedication
+                        to craftmanship, we develop the finest quality from the most robust material. Crafted to
+                        withstand
+                        storms and to comfort on late summer nights. With profound care for nature, we create
+                        knitwear that
+                        lasts, that can be passed on – a legacy for times to come.</p>
+                </div>
+                <div class="section-1-img">
+                    <img src="./assets/images/section-1-img.jpg" alt="W22 collection">
                 </div>
             </div>
         </section>
@@ -183,8 +182,73 @@
         </section>
     </main>
     <footer>
+        <div class="banner">
+            <div class="banner__content">
+                <h2>A Legacy of Wool <br> Since 1853</h2>
+                <p>Using our knowledge, rooted in our Devold heritage, we continue the tradition of mastering wool.</p>
+                <div class="banner__links">
+                    <p>Read more:</p>
+                    <p><a href="#">Our Heritage</a></p>
+                    <p><a href="#">Devold of Norway</a></p>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid">
-            <div class="banner"></div>
+            <div class="footer__navigation">
+                <div class="footer__part-left">
+
+                    <img src="./assets/images/footer-logo.svg" alt="O.A.DEVOLD.">
+
+                    <nav class="footer__nav-1">
+                        <div>
+                            <ul class="nav-1__part-1">
+                                <li><a href="#">Women</a></li>
+                                <li><a href="#">Men</a></li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul class="nav-1__part-2">
+                                <li><a href="#">Our Heritage</a></li>
+                                <li><a href="#">Care</a></li>
+                                <li><a href="#">Collections</a></li>
+                                <li><a href="#">Responsibility</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div class="footer__part-right">
+                    <div class="part-right__links">
+                        <div class="part-right__links-part-1">
+                            <p><a href="#">Stores and Showroom</a></p>
+                            <p><a href="#">Shipping & Delivery</a></p>
+                            <p><a href="#">Returns & Exhanges</a></p>
+                            <p><a href="#">Terms & Conditions</a></p>
+                            <p><a href="#">Privacy Policy</a></p>
+                            <p><a href="#">Cookies</a></p>
+                            <p><a href="#">Customer service</a></p>
+                        </div>
+                        <div>
+                            <p><a href="#">Devold of Norway</a></p>
+                        </div>
+                    </div>
+                    <div class="part-right__form">
+                        <div>
+                            <p>Newsletter</p>
+                            <p>Collections, events and new arrivals</p>
+                            <p>Get 10% off on your next online order.</p>
+                        </div>
+                        <div class="part-right__checkbox">
+                            <label for="accept"></label>
+                            <input type="checkbox" id="accept">
+                            <p>I accept the <a href="#">O.A.D. privacy policy.</a></p>
+                        </div>
+                        <div>
+                            <img src="./assets/images/footer-img-1.svg" alt="">
+                            <img src="./assets/images/footer-img-2.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 
