--- a/index.html
+++ b/index.html
@@ -26,20 +26,25 @@
                 </nav>
                 <nav class="header__nav-2">
                     <ul class="nav-2__left-part">
-                        <li><a href="#">Our Heritage<a>
+                        <li><a href="#">Our Heritage</a>
                         <li>
                         <li><a href="#">Care</a></li>
                         <li><a href="#">Collections</a></li>
                         <li><a href="#">Responsibility</a></li>
                     </ul>
                     <div class="nav-2__right-part">
-                        <select name="language" id="">
+                        <select name="language" id="language">
                             <option value="">IE / EUR</option>
                             <option value="">FR / EUR</option>
                         </select>
                         <img src="./assets/images/header-shop.svg" alt="shop">
                     </div>
                 </nav>
+                <div class="header__burger burger">
+                    <span class="burger__line burger__line-first"></span>
+                    <span class="burger__line burger__line-second"></span>
+                    <span class="burger__line burger__line-third"></span>
+                </div>
             </div>
         </div>
     </header>
@@ -48,7 +53,7 @@
             <div class="section-1__wrapper">
                 <div class="section-1__content">
                     <h1>FW22 collection</h1>
-                    <h2>An Endless <br> Pursuit <br> of Nature</h2>
+                    <h2>An Endless Pursuit of Nature</h2>
                     <p>In 1853 Ole Andreas Devold embarked on his journey, and since then our wool has been formed
                         in the
                         roughest conditions. Today, we build on our tradition of mastering wool. Relying on our
@@ -239,7 +244,7 @@
                         </div>
                         <div class="part-right__checkbox">
                             <label for="accept"></label>
-                            <input type="checkbox" id="accept">
+                            <input type="checkbox" id="accept-2">
                             <p>I accept the <a href="#">O.A.D. privacy policy.</a></p>
                         </div>
                         <div>
